added about and made small visual changes

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 - title: B.A. in Computer Science
   school: Scripps College
-  notes: Majoring at Harvey Mudd College in computer science and minoring in math.
+  notes: Majoring through Harvey Mudd College in computer science and minoring in math.
   time: 2016-present
 
 - title: High School Diploma
